--- a/Contacts.html
+++ b/Contacts.html
@@ -10,7 +10,7 @@
     <link href="https://db.onlinewebfonts.com/c/575fc498ad34ad0f411e618dad9ed36a?family=Graphik+LC+Web+Regular" rel="таблица стилей">
 
     <link href="css/style.css" rel="stylesheet">
-    <link href="css/grid.css" rel="stylesheet">
+    <link href="css/grid_normVersion.css" rel="stylesheet">
 
     <title>Document</title>
 </head>
@@ -239,4 +239,6 @@
             </div>
         </section>
     </footer>
+
+    <script src="js/script.js"></script>
 </html>
