--- a/Contacts.html
+++ b/Contacts.html
@@ -57,13 +57,17 @@
 
     <main>
         <nav class="breadcrams">
-            <a class="breadcrams-main" href="#">Главная</a>
-            <div class="breadcrams-point"></div>
-            <a class="breadcrams-contacts activePage" href="#">Контакты</a>
+            <div class="breadcrams-wrapper">
+                <a class="breadcrams-main" href="#">Главная</a>
+                <div class="breadcrams-point"></div>
+                <a class="breadcrams-contacts activePage" href="#">Контакты</a>
+            </div>
         </nav>
 
         <section class="Info1">
-            <h1>Контакты</h1>
+            <div class="Info1-topBackground">
+                <h1>Контакты</h1>
+            </div>
 
             <arcticle class="Info1-Part1">
                 <p class="Info1-Part1-number">8 (903) 467 98 51</p>
@@ -111,7 +115,7 @@
                     <div class="Info2-Part1-agreeing">
                         <input id="Info1-Part2-checkbox" type="checkbox">
                         <label for="Info1-Part2-checkbox" class="Info1-Part1-agreeing-text">
-                            Я подтверждаю свое согласие с политикой в отношении <a  class="Info1-Part1-agreeing-link" href="#">обработкиперсональных данных</a>
+                            Я подтверждаю свое согласие с политикой в отношении <a  class="Info1-Part2-agreeing-link" href="#">обработкиперсональных данных</a>
                         </label>
                     </div>
     
