commit7-before_deepseek

--- a/Contacts.html
+++ b/Contacts.html
@@ -71,8 +71,10 @@
 
             <div class="Info1-wrapper">
                 <arcticle class="Info1-Part1">
-                    <p class="Info1-Part1-number">8 (903) 467 98 51</p>
-                    <p class="Info1-Part-email">info@monevac.ru</p>
+                    <div class="Info1-Part1-numberEmail">
+                        <p class="Info1-Part1-number">8 (903) 467 98 51</p>
+                        <p class="Info1-Part-email">info@monevac.ru</p>
+                    </div>
     
                     <div class="Info1-Part1-group1">
                         <h2 class="Info1-Part1-group1-item">Полное наименование:</h2>
