commit10_start_creating_footer-grid_and_adaptibility

--- a/Contacts.html
+++ b/Contacts.html
@@ -228,11 +228,14 @@
 
         <section class="footer-right">
             <div class="footer-right-top">
-                <p class="footer-right-number1">+7 (499) 136-17-18</p>
+                <div class="footer-right-numbers">
+                    <p class="footer-right-number1">+7 (499) 136-17-18</p>
+                    <p class="footer-right-number2">+7 (903) 467-98-51 </p>
+                </div>
+
                 <a href="#">Обратный звонок</a>
             </div>
 
-            <p class="footer-right-number2">+7 (903) 467-98-51 </p>
             <a class="footer-right-email" href="#">info@monevac.ru</a>
             <address>Москва ул. Дербеневская, д. 1, стр. 1, подъезд 44, офис 6 (станция метро "Павелецкая")</address>
         </section>
