commit11_footer_adaptibility_in_work

--- a/Contacts.html
+++ b/Contacts.html
@@ -205,51 +205,55 @@
 
 
     <footer>
-        <section class="footer-left">
-            <ul class="footer-left-list1">
-                <li class="footer-left-list1-item"><a href="#">Упаковочное оборудование</a></li>
-                <li class="footer-left-list1-item"><a href="#">Пленки</a></li>
-                <li class="footer-left-list1-item"><a href="#">Пакеты</a></li>
-                <li class="footer-left-list1-item"><a href="#">Прочие материалы</a></li>
-            </ul> 
+        <div class="footer-leftRight">
+            <section class="footer-left">
+                <ul class="footer-left-list1">
+                    <li class="footer-left-list1-item"><a href="#">Упаковочное оборудование</a></li>
+                    <li class="footer-left-list1-item"><a href="#">Пленки</a></li>
+                    <li class="footer-left-list1-item"><a href="#">Пакеты</a></li>
+                    <li class="footer-left-list1-item"><a href="#">Прочие материалы</a></li>
+                </ul> 
 
-            <ul class="footer-left-list2">
-                <li class="footer-left-list2-item"><a href="#">О Компании</a></li>
-                <li class="footer-left-list2-item"><a href="#">Партнеры</a></li>
-                <li class="footer-left-list2-item"><a href="#">Доставка</a></li>
-                <li class="footer-left-list2-item"><a href="#">Оплата</a></li>
-                <li class="footer-left-list2-item"><a href="#">Обмен и возврат</a></li>
-                <li class="footer-left-list2-item"><a href="#">Контакты</a></li>
-                <li class="footer-left-list2-item"><a href="#">Распродажа</a></li>
-                <li class="footer-left-list2-item"><a href="#">Сервис</a></li>
-                <li class="footer-left-list2-item"><a href="#">Новости</a></li>
-            </ul>
-        </section>
+                <ul class="footer-left-list2">
+                    <li class="footer-left-list2-item"><a href="#">О Компании</a></li>
+                    <li class="footer-left-list2-item"><a href="#">Партнеры</a></li>
+                    <li class="footer-left-list2-item"><a href="#">Доставка</a></li>
+                    <li class="footer-left-list2-item"><a href="#">Оплата</a></li>
+                    <li class="footer-left-list2-item footer-left-list2-item-move"><a href="#">Обмен и возврат</a></li>
+                    <li class="footer-left-list2-item"><a href="#">Контакты</a></li>
+                    <li class="footer-left-list2-item"><a href="#">Распродажа</a></li>
+                    <li class="footer-left-list2-item"><a href="#">Сервис</a></li>
+                    <li class="footer-left-list2-item"><a href="#">Новости</a></li>
+                </ul>
+            </section>
 
-        <section class="footer-right">
-            <div class="footer-right-top">
-                <div class="footer-right-numbers">
-                    <p class="footer-right-number1">+7 (499) 136-17-18</p>
-                    <p class="footer-right-number2">+7 (903) 467-98-51 </p>
+            <section class="footer-right">
+                <div class="footer-right-top">
+                    <div class="footer-right-numbers">
+                        <p class="footer-right-number1">+7 (499) 136-17-18</p>
+                        <p class="footer-right-number2">+7 (903) 467-98-51 </p>
+                    </div>
+                    <a href="#">Обратный звонок</a>
                 </div>
-
-                <a href="#">Обратный звонок</a>
-            </div>
-
-            <a class="footer-right-email" href="#">info@monevac.ru</a>
-            <address>Москва ул. Дербеневская, д. 1, стр. 1, подъезд 44, офис 6 (станция метро "Павелецкая")</address>
-        </section>
+                <a class="footer-right-email" href="#">info@monevac.ru</a>
+                <address>Москва ул. Дербеневская, д. 1, стр. 1, подъезд 44, офис 6 (станция метро "Павелецкая")</address>
+            </section>
+        </div>
 
         <section class="footer-lastInfo">
-            <div class="Coopiright_policy">
-                <span class="coopiright">© Моневак 2020 | </span>
-                <span class="policy"><a href="#">Все права защищены</a></span>
-            </div>
+            <article class="footer-lastInfo-left">
+                <div class="Coopiright_policy">
+                    <span class="coopiright">© Моневак 2020 | </span>
+                    <span class="policy"><a href="#">Все права защищены</a></span>
+                </div>
+            </article>
 
-            <div class="DevelopingSite">
-                <p>Разработка и продвижение сайта - </p>
-                <a href="#">TODO</a>
-            </div>
+            <article class="footer-lastInfo-right">
+                <div class="DevelopingSite">
+                    <p>Разработка и продвижение сайта - </p>
+                    <a href="#">TODO</a>
+                </div>
+            </article>
         </section>
     </footer>
 
