--- a/Contacts.html
+++ b/Contacts.html
@@ -219,7 +219,7 @@
                     <li class="footer-left-list2-item"><a href="#">Партнеры</a></li>
                     <li class="footer-left-list2-item"><a href="#">Доставка</a></li>
                     <li class="footer-left-list2-item"><a href="#">Оплата</a></li>
-                    <li class="footer-left-list2-item footer-left-list2-item-move"><a href="#">Обмен и возврат</a></li>
+                    <li class="footer-left-list2-item footer-left-list2-move"><a href="#">Обмен и возврат</a></li>
                     <li class="footer-left-list2-item"><a href="#">Контакты</a></li>
                     <li class="footer-left-list2-item"><a href="#">Распродажа</a></li>
                     <li class="footer-left-list2-item"><a href="#">Сервис</a></li>
